# vize

./: .gitignore  .gitmodules  Cargo.toml  README.md  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: check.yml  ci.yml  deploy-docs.yml  deploy-playground.yml  release.yml
bench/: check.ts  fmt.ts  generate.mjs  lint.ts  run.ts  vite.ts
crates/vize/: Cargo.toml
crates/vize_atelier_core/: Cargo.toml
crates/vize_atelier_dom/: Cargo.toml
crates/vize_atelier_sfc/: Cargo.toml
crates/vize_canon/: Cargo.toml
crates/vize_croquis/: Cargo.toml  README.md
crates/vize_glyph/: Cargo.toml
crates/vize_maestro/: Cargo.toml
crates/vize_patina/: Cargo.toml
crates/vize_relief/: Cargo.toml
crates/vize_vitrine/: Cargo.toml
docs/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/content/: getting-started.md  index.md  philosophy.md
docs/theme/: marble.js  og.vue  style.css
e2e/: smoke.spec.ts
examples/cli/: vize.config.ts
examples/vite-musea/: package.json  tsconfig.json  vite.config.ts  vize.config.ts
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-arm64/: package.json
npm/cli-win32-x64/: package.json
npm/fresco/: package.json
npm/fresco-native/: package.json
playground/: index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: pre-commit  release.sh
tests/vue_test_runner/: Cargo.toml
tests/vue_test_runner/src/: coverage.rs  lib.rs
(+914 files in other folders)
